--- a/_extensions/cambiotraining/courseformat/theme.scss
+++ b/_extensions/cambiotraining/courseformat/theme.scss
@@ -15,10 +15,10 @@ $body-color: black;
 $link-color: #003a41;
 
 //make font size a bit larger than default
-$font-size-root: 1.2rem;
-$toc-font-size: 0.9rem;
-$sidebar-font-size: 0.9rem;
-$sidebar-font-size-section: 0.9rem !default;
+// $font-size-root: 1.2rem;
+// $toc-font-size: 0.9rem;
+// $sidebar-font-size: 0.9rem;
+// $sidebar-font-size-section: 0.9rem !default;
 
 //tweak callout colours to match our scheme
 //based on https://coolors.co/28828a-106470-003a41-d62828-f77f00
@@ -42,13 +42,12 @@ div.sidebar-item-container .active {
 }
 
 // active links - affects header and TOC navigation bar
-.nav-link.active {
+.sidebar .nav-link.active {
   font-weight: bold;
 }
 
 // active links on the header specifically
 .navbar-dark .navbar-nav .nav-link.active {
-  font-weight: bold;
   color: white;
   text-decoration: underline;
 }
@@ -61,5 +60,12 @@ div.sidebar-item-container .active {
 
 // font size on footer - make larger than default
 .nav-footer, .nav-footer-left, .nav-footer-right, .nav-footer-center {
-  font-size: 1.2rem;
+  font-size: 1rem;
+}
+
+// figure display
+.figure {
+  text-align: center;
+  text-indent: 0;
+  border-bottom: 1px solid #dee2e6;
 }
