--- a/_extensions/cambiotraining/courseformat/theme.scss
+++ b/_extensions/cambiotraining/courseformat/theme.scss
@@ -41,6 +41,11 @@ div.sidebar-item-container .active {
   font-weight: bold;
 }
 
+// part titles text bold
+div.sidebar-item-container .text-start {
+  font-weight: bold;
+}
+
 // active links - affects header and TOC navigation bar
 .sidebar .nav-link.active {
   font-weight: bold;
