--- a/_extensions/cambiotraining/courseformat/theme.scss
+++ b/_extensions/cambiotraining/courseformat/theme.scss
@@ -43,7 +43,9 @@ div.sidebar-item-container .active {
 
 // part titles text bold
 div.sidebar-item-container .text-start {
+  color: #003a41;
   font-weight: bold;
+  font-size: 0.8rem;
 }
 
 // active links - affects header and TOC navigation bar
